--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ textual = "^0.52.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 ruff = "^0.3.0"
+textual-dev = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
